DLP_PL11/bin/parser/y.output
   0  $accept : program $end

   1  program : _program main

   2  _program :
   3           | _program variable_definition
   4           | _program function_definition

   5  main : DEF MAIN '(' ')' ':' VOID '{' function_body '}'

   6  variable_definition : variables ':' type ';'

   7  variables : ID
   8            | variables ',' ID

   9  function_definition : DEF ID '(' parameters ')' ':' return_type '{' function_body '}'

  10  parameters :
  11             | _parameters

  12  _parameters : parameter
  13              | _parameters ',' parameter

  14  parameter : ID ':' simple_type

  15  return_type : simple_type
  16              | VOID

  17  function_body :
  18                | variable_definitions statements
  19                | variable_definitions
  20                | statements

  21  variable_definitions : variable_definition
  22                       | variable_definitions variable_definition

  23  statements : statement
  24             | statements statement

  25  statement : assignment
  26            | function_call_as_statement
  27            | return
  28            | while
  29            | if
  30            | read
  31            | write

  32  type : simple_type
  33       | array
  34       | struct

  35  simple_type : INT
  36              | DOUBLE
  37              | CHAR

  38  array : '[' INT_CONSTANT ']' type

  39  struct : STRUCT '{' struct_body '}'

  40  struct_body : variable_definition
  41              | struct_body variable_definition

  42  assignment : expression '=' expression ';'

  43  read : INPUT expressions ';'

  44  write : PRINT expressions ';'

  45  expressions : expression
  46              | expressions ',' expression

  47  while : WHILE expression ':' '{' statements '}'
  48        | WHILE expression ':' statement

  49  if : IF expression ':' '{' statements '}'
  50     | IF expression ':' '{' statements '}' ELSE '{' statements '}'
  51     | IF expression ':' '{' statements '}' ELSE statement
  52     | IF expression ':' statement
  53     | IF expression ':' statement ELSE '{' statements '}'
  54     | IF expression ':' statement ELSE statement

  55  return : RETURN expression ';'

  56  parameters_in_funcion_call :
  57                             | expressions

  58  function_call_as_statement : ID '(' parameters_in_funcion_call ')' ';'

  59  function_call_as_expression : ID '(' parameters_in_funcion_call ')'

  60  expression : expression AND expression
  61             | expression OR expression
  62             | expression '>' expression
  63             | expression GREATER_OR_EQUAL expression
  64             | expression '<' expression
  65             | expression LESS_OR_EQUAL expression
  66             | expression DISTINCT expression
  67             | expression EQUALS expression
  68             | expression '+' expression
  69             | expression '-' expression
  70             | expression '*' expression
  71             | expression '/' expression
  72             | expression '%' expression
  73             | '!' expression
  74             | '-' expression
  75             | '(' simple_type ')' expression
  76             | expression '.' ID
  77             | expression '[' expression ']'
  78             | '(' expression ')'
  79             | function_call_as_expression
  80             | INT_CONSTANT
  81             | REAL_CONSTANT
  82             | CHAR_CONSTANT
  83             | ID

state 0
	$accept : . program $end  (0)
	_program : .  (2)

	.  reduce 2

	program  goto 1
	_program  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : _program . main  (1)
	_program : _program . variable_definition  (3)
	_program : _program . function_definition  (4)

	DEF  shift 3
	ID  shift 4
	.  error

	main  goto 5
	variable_definition  goto 6
	function_definition  goto 7
	variables  goto 8


state 3
	main : DEF . MAIN '(' ')' ':' VOID '{' function_body '}'  (5)
	function_definition : DEF . ID '(' parameters ')' ':' return_type '{' function_body '}'  (9)

	ID  shift 9
	MAIN  shift 10
	.  error


state 4
	variables : ID .  (7)

	.  reduce 7


state 5
	program : _program main .  (1)

	.  reduce 1


state 6
	_program : _program variable_definition .  (3)

	.  reduce 3


state 7
	_program : _program function_definition .  (4)

	.  reduce 4


state 8
	variable_definition : variables . ':' type ';'  (6)
	variables : variables . ',' ID  (8)

	':'  shift 11
	','  shift 12
	.  error


state 9
	function_definition : DEF ID . '(' parameters ')' ':' return_type '{' function_body '}'  (9)

	'('  shift 13
	.  error


state 10
	main : DEF MAIN . '(' ')' ':' VOID '{' function_body '}'  (5)

	'('  shift 14
	.  error


state 11
	variable_definition : variables ':' . type ';'  (6)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 20
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 12
	variables : variables ',' . ID  (8)

	ID  shift 24
	.  error


state 13
	function_definition : DEF ID '(' . parameters ')' ':' return_type '{' function_body '}'  (9)
	parameters : .  (10)

	ID  shift 25
	')'  reduce 10

	parameters  goto 26
	_parameters  goto 27
	parameter  goto 28


state 14
	main : DEF MAIN '(' . ')' ':' VOID '{' function_body '}'  (5)

	')'  shift 29
	.  error


state 15
	simple_type : INT .  (35)

	.  reduce 35


state 16
	simple_type : DOUBLE .  (36)

	.  reduce 36


state 17
	simple_type : CHAR .  (37)

	.  reduce 37


state 18
	struct : STRUCT . '{' struct_body '}'  (39)

	'{'  shift 30
	.  error


state 19
	array : '[' . INT_CONSTANT ']' type  (38)

	INT_CONSTANT  shift 31
	.  error


state 20
	variable_definition : variables ':' type . ';'  (6)

	';'  shift 32
	.  error


state 21
	type : simple_type .  (32)

	.  reduce 32


state 22
	type : array .  (33)

	.  reduce 33


state 23
	type : struct .  (34)

	.  reduce 34


state 24
	variables : variables ',' ID .  (8)

	.  reduce 8


state 25
	parameter : ID . ':' simple_type  (14)

	':'  shift 33
	.  error


state 26
	function_definition : DEF ID '(' parameters . ')' ':' return_type '{' function_body '}'  (9)

	')'  shift 34
	.  error


state 27
	parameters : _parameters .  (11)
	_parameters : _parameters . ',' parameter  (13)

	','  shift 35
	')'  reduce 11


state 28
	_parameters : parameter .  (12)

	.  reduce 12


state 29
	main : DEF MAIN '(' ')' . ':' VOID '{' function_body '}'  (5)

	':'  shift 36
	.  error


state 30
	struct : STRUCT '{' . struct_body '}'  (39)

	ID  shift 4
	.  error

	variable_definition  goto 37
	variables  goto 8
	struct_body  goto 38


state 31
	array : '[' INT_CONSTANT . ']' type  (38)

	']'  shift 39
	.  error


state 32
	variable_definition : variables ':' type ';' .  (6)

	.  reduce 6


state 33
	parameter : ID ':' . simple_type  (14)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	.  error

	simple_type  goto 40


state 34
	function_definition : DEF ID '(' parameters ')' . ':' return_type '{' function_body '}'  (9)

	':'  shift 41
	.  error


state 35
	_parameters : _parameters ',' . parameter  (13)

	ID  shift 25
	.  error

	parameter  goto 42


state 36
	main : DEF MAIN '(' ')' ':' . VOID '{' function_body '}'  (5)

	VOID  shift 43
	.  error


state 37
	struct_body : variable_definition .  (40)

	.  reduce 40


state 38
	struct : STRUCT '{' struct_body . '}'  (39)
	struct_body : struct_body . variable_definition  (41)

	ID  shift 4
	'}'  shift 44
	.  error

	variable_definition  goto 45
	variables  goto 8


state 39
	array : '[' INT_CONSTANT ']' . type  (38)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	STRUCT  shift 18
	'['  shift 19
	.  error

	type  goto 46
	simple_type  goto 21
	array  goto 22
	struct  goto 23


state 40
	parameter : ID ':' simple_type .  (14)

	.  reduce 14


state 41
	function_definition : DEF ID '(' parameters ')' ':' . return_type '{' function_body '}'  (9)

	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	VOID  shift 47
	.  error

	return_type  goto 48
	simple_type  goto 49


state 42
	_parameters : _parameters ',' parameter .  (13)

	.  reduce 13


state 43
	main : DEF MAIN '(' ')' ':' VOID . '{' function_body '}'  (5)

	'{'  shift 50
	.  error


state 44
	struct : STRUCT '{' struct_body '}' .  (39)

	.  reduce 39


state 45
	struct_body : struct_body variable_definition .  (41)

	.  reduce 41


state 46
	array : '[' INT_CONSTANT ']' type .  (38)

	.  reduce 38


state 47
	return_type : VOID .  (16)

	.  reduce 16


state 48
	function_definition : DEF ID '(' parameters ')' ':' return_type . '{' function_body '}'  (9)

	'{'  shift 51
	.  error


state 49
	return_type : simple_type .  (15)

	.  reduce 15


state 50
	main : DEF MAIN '(' ')' ':' VOID '{' . function_body '}'  (5)
	function_body : .  (17)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 17

	variable_definition  goto 64
	function_body  goto 65
	variables  goto 8
	variable_definitions  goto 66
	statements  goto 67
	statement  goto 68
	assignment  goto 69
	function_call_as_statement  goto 70
	return  goto 71
	while  goto 72
	if  goto 73
	read  goto 74
	write  goto 75
	expression  goto 76
	function_call_as_expression  goto 77


state 51
	function_definition : DEF ID '(' parameters ')' ':' return_type '{' . function_body '}'  (9)
	function_body : .  (17)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 17

	variable_definition  goto 64
	function_body  goto 78
	variables  goto 8
	variable_definitions  goto 66
	statements  goto 67
	statement  goto 68
	assignment  goto 69
	function_call_as_statement  goto 70
	return  goto 71
	while  goto 72
	if  goto 73
	read  goto 74
	write  goto 75
	expression  goto 76
	function_call_as_expression  goto 77


state 52
	expression : INT_CONSTANT .  (80)

	.  reduce 80


state 53
	expression : REAL_CONSTANT .  (81)

	.  reduce 81


state 54
	expression : CHAR_CONSTANT .  (82)

	.  reduce 82


state 55
	read : INPUT . expressions ';'  (43)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 80
	expressions  goto 81
	function_call_as_expression  goto 77


state 56
	write : PRINT . expressions ';'  (44)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 80
	expressions  goto 82
	function_call_as_expression  goto 77


state 57
	while : WHILE . expression ':' '{' statements '}'  (47)
	while : WHILE . expression ':' statement  (48)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 83
	function_call_as_expression  goto 77


state 58
	if : IF . expression ':' '{' statements '}'  (49)
	if : IF . expression ':' '{' statements '}' ELSE '{' statements '}'  (50)
	if : IF . expression ':' '{' statements '}' ELSE statement  (51)
	if : IF . expression ':' statement  (52)
	if : IF . expression ':' statement ELSE '{' statements '}'  (53)
	if : IF . expression ':' statement ELSE statement  (54)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 84
	function_call_as_expression  goto 77


state 59
	return : RETURN . expression ';'  (55)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 85
	function_call_as_expression  goto 77


state 60
	variables : ID .  (7)
	function_call_as_statement : ID . '(' parameters_in_funcion_call ')' ';'  (58)
	function_call_as_expression : ID . '(' parameters_in_funcion_call ')'  (59)
	expression : ID .  (83)

	'('  shift 86
	'='  reduce 83
	AND  reduce 83
	OR  reduce 83
	'>'  reduce 83
	GREATER_OR_EQUAL  reduce 83
	'<'  reduce 83
	LESS_OR_EQUAL  reduce 83
	DISTINCT  reduce 83
	EQUALS  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'.'  reduce 83
	'['  reduce 83
	':'  reduce 7
	','  reduce 7


state 61
	expression : '-' . expression  (74)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 87
	function_call_as_expression  goto 77


state 62
	expression : '!' . expression  (73)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 88
	function_call_as_expression  goto 77


state 63
	expression : '(' . simple_type ')' expression  (75)
	expression : '(' . expression ')'  (78)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	INT  shift 15
	DOUBLE  shift 16
	CHAR  shift 17
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	simple_type  goto 89
	expression  goto 90
	function_call_as_expression  goto 77


state 64
	variable_definitions : variable_definition .  (21)

	.  reduce 21


state 65
	main : DEF MAIN '(' ')' ':' VOID '{' function_body . '}'  (5)

	'}'  shift 91
	.  error


state 66
	function_body : variable_definitions . statements  (18)
	function_body : variable_definitions .  (19)
	variable_definitions : variable_definitions . variable_definition  (22)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 19

	variable_definition  goto 92
	variables  goto 8
	statements  goto 93
	statement  goto 68
	assignment  goto 69
	function_call_as_statement  goto 70
	return  goto 71
	while  goto 72
	if  goto 73
	read  goto 74
	write  goto 75
	expression  goto 76
	function_call_as_expression  goto 77


state 67
	function_body : statements .  (20)
	statements : statements . statement  (24)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 94
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 20

	statement  goto 95
	assignment  goto 69
	function_call_as_statement  goto 70
	return  goto 71
	while  goto 72
	if  goto 73
	read  goto 74
	write  goto 75
	expression  goto 76
	function_call_as_expression  goto 77


state 68
	statements : statement .  (23)

	.  reduce 23


state 69
	statement : assignment .  (25)

	.  reduce 25


state 70
	statement : function_call_as_statement .  (26)

	.  reduce 26


state 71
	statement : return .  (27)

	.  reduce 27


state 72
	statement : while .  (28)

	.  reduce 28


state 73
	statement : if .  (29)

	.  reduce 29


state 74
	statement : read .  (30)

	.  reduce 30


state 75
	statement : write .  (31)

	.  reduce 31


state 76
	assignment : expression . '=' expression ';'  (42)
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)

	'='  shift 96
	AND  shift 97
	OR  shift 98
	'>'  shift 99
	GREATER_OR_EQUAL  shift 100
	'<'  shift 101
	LESS_OR_EQUAL  shift 102
	DISTINCT  shift 103
	EQUALS  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	.  error


state 77
	expression : function_call_as_expression .  (79)

	.  reduce 79


state 78
	function_definition : DEF ID '(' parameters ')' ':' return_type '{' function_body . '}'  (9)

	'}'  shift 112
	.  error


state 79
	function_call_as_expression : ID . '(' parameters_in_funcion_call ')'  (59)
	expression : ID .  (83)

	'('  shift 113
	'='  reduce 83
	AND  reduce 83
	OR  reduce 83
	'>'  reduce 83
	GREATER_OR_EQUAL  reduce 83
	'<'  reduce 83
	LESS_OR_EQUAL  reduce 83
	DISTINCT  reduce 83
	EQUALS  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'.'  reduce 83
	'['  reduce 83
	']'  reduce 83
	')'  reduce 83
	':'  reduce 83
	';'  reduce 83
	','  reduce 83


state 80
	expressions : expression .  (45)
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)

	AND  shift 97
	OR  shift 98
	'>'  shift 99
	GREATER_OR_EQUAL  shift 100
	'<'  shift 101
	LESS_OR_EQUAL  shift 102
	DISTINCT  shift 103
	EQUALS  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	')'  reduce 45
	';'  reduce 45
	','  reduce 45


state 81
	read : INPUT expressions . ';'  (43)
	expressions : expressions . ',' expression  (46)

	';'  shift 114
	','  shift 115
	.  error


state 82
	write : PRINT expressions . ';'  (44)
	expressions : expressions . ',' expression  (46)

	';'  shift 116
	','  shift 115
	.  error


state 83
	while : WHILE expression . ':' '{' statements '}'  (47)
	while : WHILE expression . ':' statement  (48)
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)

	AND  shift 97
	OR  shift 98
	'>'  shift 99
	GREATER_OR_EQUAL  shift 100
	'<'  shift 101
	LESS_OR_EQUAL  shift 102
	DISTINCT  shift 103
	EQUALS  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	':'  shift 117
	.  error


state 84
	if : IF expression . ':' '{' statements '}'  (49)
	if : IF expression . ':' '{' statements '}' ELSE '{' statements '}'  (50)
	if : IF expression . ':' '{' statements '}' ELSE statement  (51)
	if : IF expression . ':' statement  (52)
	if : IF expression . ':' statement ELSE '{' statements '}'  (53)
	if : IF expression . ':' statement ELSE statement  (54)
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)

	AND  shift 97
	OR  shift 98
	'>'  shift 99
	GREATER_OR_EQUAL  shift 100
	'<'  shift 101
	LESS_OR_EQUAL  shift 102
	DISTINCT  shift 103
	EQUALS  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	':'  shift 118
	.  error


state 85
	return : RETURN expression . ';'  (55)
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)

	AND  shift 97
	OR  shift 98
	'>'  shift 99
	GREATER_OR_EQUAL  shift 100
	'<'  shift 101
	LESS_OR_EQUAL  shift 102
	DISTINCT  shift 103
	EQUALS  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	';'  shift 119
	.  error


state 86
	function_call_as_statement : ID '(' . parameters_in_funcion_call ')' ';'  (58)
	function_call_as_expression : ID '(' . parameters_in_funcion_call ')'  (59)
	parameters_in_funcion_call : .  (56)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	')'  reduce 56

	expression  goto 80
	expressions  goto 120
	parameters_in_funcion_call  goto 121
	function_call_as_expression  goto 77


state 87
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : '-' expression .  (74)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)

	'.'  shift 110
	'['  shift 111
	'='  reduce 74
	AND  reduce 74
	OR  reduce 74
	'>'  reduce 74
	GREATER_OR_EQUAL  reduce 74
	'<'  reduce 74
	LESS_OR_EQUAL  reduce 74
	DISTINCT  reduce 74
	EQUALS  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	']'  reduce 74
	')'  reduce 74
	':'  reduce 74
	';'  reduce 74
	','  reduce 74


state 88
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : '!' expression .  (73)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)

	'.'  shift 110
	'['  shift 111
	'='  reduce 73
	AND  reduce 73
	OR  reduce 73
	'>'  reduce 73
	GREATER_OR_EQUAL  reduce 73
	'<'  reduce 73
	LESS_OR_EQUAL  reduce 73
	DISTINCT  reduce 73
	EQUALS  reduce 73
	'+'  reduce 73
	'-'  reduce 73
	'*'  reduce 73
	'/'  reduce 73
	'%'  reduce 73
	']'  reduce 73
	')'  reduce 73
	':'  reduce 73
	';'  reduce 73
	','  reduce 73


state 89
	expression : '(' simple_type . ')' expression  (75)

	')'  shift 122
	.  error


state 90
	expression : expression . AND expression  (60)
	expression : expression . OR expression  (61)
	expression : expression . '>' expression  (62)
	expression : expression . GREATER_OR_EQUAL expression  (63)
	expression : expression . '<' expression  (64)
	expression : expression . LESS_OR_EQUAL expression  (65)
	expression : expression . DISTINCT expression  (66)
	expression : expression . EQUALS expression  (67)
	expression : expression . '+' expression  (68)
	expression : expression . '-' expression  (69)
	expression : expression . '*' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '%' expression  (72)
	expression : expression . '.' ID  (76)
	expression : expression . '[' expression ']'  (77)
	expression : '(' expression . ')'  (78)

	AND  shift 97
	OR  shift 98
	'>'  shift 99
	GREATER_OR_EQUAL  shift 100
	'<'  shift 101
	LESS_OR_EQUAL  shift 102
	DISTINCT  shift 103
	EQUALS  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	'['  shift 111
	')'  shift 123
	.  error


state 91
	main : DEF MAIN '(' ')' ':' VOID '{' function_body '}' .  (5)

	.  reduce 5


state 92
	variable_definitions : variable_definitions variable_definition .  (22)

	.  reduce 22


state 93
	function_body : variable_definitions statements .  (18)
	statements : statements . statement  (24)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 94
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  reduce 18

	statement  goto 95
	assignment  goto 69
	function_call_as_statement  goto 70
	return  goto 71
	while  goto 72
	if  goto 73
	read  goto 74
	write  goto 75
	expression  goto 76
	function_call_as_expression  goto 77


state 94
	function_call_as_statement : ID . '(' parameters_in_funcion_call ')' ';'  (58)
	function_call_as_expression : ID . '(' parameters_in_funcion_call ')'  (59)
	expression : ID .  (83)

	'('  shift 86
	'='  reduce 83
	AND  reduce 83
	OR  reduce 83
	'>'  reduce 83
	GREATER_OR_EQUAL  reduce 83
	'<'  reduce 83
	LESS_OR_EQUAL  reduce 83
	DISTINCT  reduce 83
	EQUALS  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'.'  reduce 83
	'['  reduce 83


state 95
	statements : statements statement .  (24)

	.  reduce 24


state 96
	assignment : expression '=' . expression ';'  (42)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 124
	function_call_as_expression  goto 77


state 97
	expression : expression AND . expression  (60)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 125
	function_call_as_expression  goto 77


state 98
	expression : expression OR . expression  (61)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 126
	function_call_as_expression  goto 77


state 99
	expression : expression '>' . expression  (62)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 127
	function_call_as_expression  goto 77


state 100
	expression : expression GREATER_OR_EQUAL . expression  (63)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 128
	function_call_as_expression  goto 77


state 101
	expression : expression '<' . expression  (64)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 129
	function_call_as_expression  goto 77


state 102
	expression : expression LESS_OR_EQUAL . expression  (65)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 130
	function_call_as_expression  goto 77


state 103
	expression : expression DISTINCT . expression  (66)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 131
	function_call_as_expression  goto 77


state 104
	expression : expression EQUALS . expression  (67)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 132
	function_call_as_expression  goto 77


state 105
	expression : expression '+' . expression  (68)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 133
	function_call_as_expression  goto 77


state 106
	expression : expression '-' . expression  (69)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 134
	function_call_as_expression  goto 77


state 107
	expression : expression '*' . expression  (70)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 135
	function_call_as_expression  goto 77


state 108
	expression : expression '/' . expression  (71)

	INT_CONSTANT  shift 52
	REAL_CONSTANT  shift 53
	CHAR_CONSTANT  shift 54
	ID  shift 79
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	expression  goto 136
	function_call_as_expression  goto 77


state 109
	expression : expression '%' . expression  (72)
